infrastructure/controllers/longhorn/production/network/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: websecure # points to port 443 listener (kind: Gateway)
  hostnames: # defines L7 (Layer 7) rule. Traefik will look at the Host header of the incoming HTTP request.
    - "longhorn.athanor.local" # If it sees longhorn.athanor.local, it triggers this rule.
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs: # forward the traffic to the longhorn-frontend service on port 80
        - name: longhorn-frontend
          port: 80
